	  it supports Telnetd via a TTY device driver: A new TTY device driver is
	  created when each new Telnet connection is created.  The shell thread
	  is started with stdin, stdout, and stderr mapped to the TTY device.
	* netutils/Telnetd:  The old uIP Telnet demo is gone.  In its place is a new
	  Telnet infrastructure. The new Telnet daemon creates sessions that are
	  "wrapped" as character devices and mapped to stdin, stdout, and stderr.
	  Now the Telnet session can be inherited by spawned tasks.
	* examples/Telnetd:  Add a test for the new Telnet daemon.
	* examples/Telnetd/telnetd_driver.c: Move the internal socket structure from
	  the daemon's socket array into the driver's state data so that it will be
	  independent from the the Telnetd daemon.
	* apps/system/readline:  Moved the old nuttx/lib/stdio/lib_fgets.c here
	  and renamed it as readline().  The old fgets was simplied and the overloaded
	  readline functionality was removed.
	* apps/netutils/ftpd:  Add an FTPD server (does not even compile on initial
	  checkin).
	* apps/examples/ftpd:  Add a test for the FTPD server (untest on initial
	  check-in).
	* apps/nshlib/nsh_fscmds.c:  Add support for a 'dmesg' command that will
	  dump the system log if CONFIG_SYSLOG is selected.

6.16 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/qencoder:  Add a quadrature driver test.
	* apps/examples/ostest/fpu.c:  Add a test to verify that FPU registers
	  are properly saved and restored on context switches.
	* apps/system/readline/readline.c:  readline() will now treat either a
	  backspace or a DEL character as a backspace (i.e., deleting the character
	  to the left of the cursor).  This makes NSH less dependent on particular
	  keyboard mappings of the Backspace key.  Submitted by Mike Smith.
	* apps/examples/cdcacm:  An example that illustrates how the CDC/ACM driver
	  may to connected and disconnected through software control.